[project]
name = "apiverve-ovulationcalculator"
version = "1.1.12"
authors = [
  { name="APIVerve", email="hello@apiverve.com" },
]
description = "Ovulation Calculator estimates ovulation dates, fertile windows, and provides detailed cycle phase information based on menstrual cycle data."
keywords = ["ovulation calculator", "fertility calendar", "fertile window", "conception calculator", "cycle tracking"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Topic :: Security",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://apiverve.com?utm_source=pypi"
Repository = "https://github.com/apiverve/ovulationcalculator-api"
Documentation = "https://docs.apiverve.com/api/ovulationcalculator?utm_source=pypi"
Twitter = "https://twitter.com/apivervehq"